kde4libs (4:4.4.0-0r2) UNRELEASED; urgency=low

  * New upstream release. The „Kalastria Highborn“ release.

  [ Modestas Vainius ]
  * Change my email address to modax@debian.org in Uploaders field.
  * Fix Vcs-Browser URL.
  * Drop obsolete presubj.
  * Do not export libQtUiTools.a symbols in kjsembed library
    (25_ld_exclude_libs_qtuitools.diff).
  * Split kdelibs5 into separate library packages:
    - each public library gets its own package with a few exceptions;
    - remaining stuff moved from kdelibs5 to kdelibs5-plugins;
    - new kdoctools binary package with files installed from kdoctools/
      directory in the source tree;
    - add package splitting rules to README.source;

  [ Kai Wasserbäch ]
  * Synced to latest upstream SVN revision of the 4.4 branch (r1083043).
  * debian/patches:
    - Dropped backported patches:
      + 00_1034808_4.4_backport_rtldglobal.diff
    - Refreshed and reworked patches:
      + 08_add_debian_build_type.diff
      + 11_default_kde4_xdg_menu_prefix.diff
      + 14_hardcode_ptm_device.diff
      + 15_kfreebsd_support.diff
      + 17_findservicebydesktoppath_try_realfilepath.diff
      + 19_findqt4_optional_x11_pthread.diff
      + 20_use_dejavu_as_default_font.diff
      + 23_solid_no_double_build.diff
      + 25_ld_exclude_libs_qtuitools.diff
    - Added patches:
      + 00_search_for_soprano_module.diff: Debian's „SopranoAddOntology.cmake“
        is located somewhere else.
  * debian/control:
    - Added Build-Depends on libattica-dev, shared-desktop-ontologies,
      libpolkit-qt-1-dev, libxss-dev and libqca2-dev.
    - Bumped Build-Depends for Qt to >= 4.6.0.
    - Bumped Build-Depends for Phonon to >= 4.4.0.
    - Bumped Build-Depends for libsoprano-dev to >= 2.3.70
    - Bumped Standards-Version to 3.8.4, no further changes needed.
  * debian/rules: Set „RUNTIME_DEPS“ to „kdebase-runtime (>= 4:4.4.0)“.
  * debian/kdelibs5-data.install: Updated.

  [ Ana Beatriz Guerrero Lopez ]