@@ -1,4 +1,3 @@
-usr/lib/kde4/libkfilemodule.so
+usr/lib/kde4/kfilemodule.so
 usr/lib/libkfile.so.4
 usr/lib/libkfile.so.4.4.0
-usr/share/kde4/servicetypes/kfileplugin.desktop
