@@ -1,2 +1,12 @@
 usr/lib/libplasma.so.3
 usr/lib/libplasma.so.3.0.0
+usr/share/kde4/servicetypes/plasma-animator.desktop
+usr/share/kde4/servicetypes/plasma-applet-popupapplet.desktop
+usr/share/kde4/servicetypes/plasma-applet.desktop
+usr/share/kde4/servicetypes/plasma-containment.desktop
+usr/share/kde4/servicetypes/plasma-containmentactions.desktop
+usr/share/kde4/servicetypes/plasma-dataengine.desktop
+usr/share/kde4/servicetypes/plasma-packagestructure.desktop
+usr/share/kde4/servicetypes/plasma-runner.desktop
+usr/share/kde4/servicetypes/plasma-scriptengine.desktop
+usr/share/kde4/servicetypes/plasma-wallpaper.desktop
